# Vision_Por_Computador_HVS_Filtrado-Espacial

./: CMakeLists.txt  punto1.cpp  punto2.cpp  punto3.cpp  punto4.cpp  punto5.cpp  punto6.cpp  punto7.cpp
